--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -65,6 +65,7 @@
 
             <Button
                 android:id="@+id/buttonBack"
+                android:layout_marginStart="@dimen/buttonBaseMarginLandScape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/blue_btnSettings"
